--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "graphiql": "0.7.1",
     "graphql": "0.6.0",
     "immutable": "3.8.1",
+    "ismobilejs": "^0.4.0",
     "isomorphic-fetch": "2.2.1",
     "joi": "8.1.0",
     "jsonwebtoken": "6.2.0",
