Adding default user

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ DATABASE_SSL=false
 PROTOCOL=http
 HOST=localhost
 PORT=3000
+
+DEFAULT_USER_EMAIL = 'god@iamaplayer.io'
+DEFAULT_USER_PASS = '123456'
