--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "babel-runtime": "6.6.1",
     "bcrypt": "0.8.6",
     "body-parser": "1.15.1",
+    "classnames": "^2.2.5",
     "compression": "1.6.1",
     "cors": "2.7.1",
     "deep-equal": "1.0.1",
