--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rimraf": "2.5.2",
     "stats-webpack-plugin": "0.3.1",
     "style-loader": "0.13.1",
+    "svg-inline-loader": "^0.7.1",
     "url-loader": "0.5.7",
     "webpack": "2.1.0-beta.4",
     "webpack-dev-middleware": "1.6.1",
@@ -118,7 +119,8 @@
     "redux-thunk": "2.1.0",
     "rethinkdbdash": "2.3.6",
     "socketcluster": "4.6.1",
-    "socketcluster-client": "4.3.17"
+    "socketcluster-client": "4.3.17",
+    "svg-inline-react": "^1.0.2"
   },
   "xo": {
     "extends": "xo-meatier"
