Added markdown editor

--- a/package.json
+++ b/package.json
@@ -96,19 +96,21 @@
     "joi": "8.1.0",
     "jsonwebtoken": "6.2.0",
     "jwt-decode": "2.0.1",
-    "material-ui": "0.15.0",
+    "material-ui": "^0.16.2",
+    "material-ui-markdown-editor": "^1.0.10",
     "node-env-flag": "0.1.0",
     "node-uuid": "1.4.7",
     "piping": "0.3.1",
-    "react": "15.0.2",
+    "react": "^15.3.2",
     "react-dnd": "2.1.4",
     "react-dnd-html5-backend": "2.1.2",
-    "react-dom": "15.0.2",
+    "react-dom": "^15.3.2",
     "react-dom-stream": "0.5.1",
+    "react-md-editor": "^0.2.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
-    "react-tap-event-plugin": "1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "3.5.2",
     "redux-form": "5.2.3",
     "redux-immutablejs": "0.0.8",
